# openz-python

./: README.md  pyproject.toml
.github/workflows/: testing.yml
openz/: __init__.py  _core.py
tests/: test_openz.py
